popup close link moved to top - this is to ensure that we can always close a visible popup.

--- a/web/css/sc.css
+++ b/web/css/sc.css
@@ -306,7 +306,7 @@
        height:160px;
        width:190px;
        /* border:1px solid #DDD ; */
-       box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4); 
+       box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
        margin :4px;
     }
 
@@ -319,11 +319,11 @@
         padding:5px;
     }
 
-    div .stackImage .link { 
+    div .stackImage .link {
         position:absolute ;
         left :60px;
         bottom : 3px ;
-    } 
+    }
 
     div .previewLink{
         padding:5px;
@@ -336,20 +336,20 @@
     }
 
 
-   
+
 
     /* + homepage tiles */
     div #tiles{
-        background : url(images/wash-white-30.png); 
+        background : url(images/wash-white-30.png);
     }
 
     .tile {
         width:204px;
         margin:4px 2px 4px 2px;
         float:left ;
-        padding:8px; 
+        padding:8px;
         background-color: white;
-        box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4); 
+        box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
         /* position:relative ; */
     }
 
@@ -389,8 +389,8 @@
 
     /*
     .tile .feeds .item {
-        border-top :0px; 
-        border-bottom :0px; 
+        border-top :0px;
+        border-bottom :0px;
     } */
 
     /* smaller tile */
@@ -402,7 +402,7 @@
         padding:4px;
         background-color: #fff;
         /* bigger shadow because we have white backgorund on item page */
-        box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4); 
+        box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
     }
 
     .stamp .photo {
@@ -584,7 +584,7 @@
         padding:5px;
         background: white;
         /* border: 1px solid #BBB; */
-        box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4); 
+        box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
     }
 
     .item-link {
@@ -669,7 +669,7 @@
     }
 
     .feeds .item:first-child {
-        border-top :0px; 
+        border-top :0px;
     }
 
     .feeds .item .title {
@@ -793,7 +793,7 @@
         z-index: 1009;
         border:4px solid #333;
         border-radius:10px;
-        padding:20px;
+        padding:7px 11px 7px 11px;
         display:none;
         overflow:hidden;
     }
@@ -828,13 +828,16 @@
 
     #simple-popup #content{
         padding:10px;
-        min-height :20px;
+        min-height :30px;
         overflow:hidden;
     }
-    
-    .panel-footer {
-        padding-top:10px;
-        border-top: 1px solid #eee ;
+
+    #simple-popup #header{
+        margin-bottom :5px;
+    }
+
+    #simple-popup #header a {
+        color:#333 ;
     }
 
     #nav-share { display:none ; }
@@ -909,8 +912,8 @@
         border:1px solid #ddd ;
         padding:8px;
         background: #eee ;
-        box-shadow: 0 1px 7px rgba(34, 25, 25, 0.4); 
-    }     
+        box-shadow: 0 1px 7px rgba(34, 25, 25, 0.4);
+    }
     /* last section - override bootstrap css */
     .page-header {
         padding-bottom: 7px;
